[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["talahajeer <tala.hajeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
sklearn = "^0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
